2022-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.10

	* vignettes/introduction.md: More edits

2022-11-15  Dirk Eddelbuettel  <edd@debian.org>

 	* src/formatter.cpp (formatter): Add formatting helper which passes
	logging string to fmt::format() enable fmt's "format" from R
	* src/RcppExports.cpp: Ditto
	* R/RcppExports.R (formatter): Ditto
	* man/formatter.Rd: Docs

	* inst/include/spdl.h: Include fmtlib::fmt via spdlog

2022-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* inst/include/spdl.h: Use variadic templates to fmt::format

2022-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.9

2022-11-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* inst/include/spdlog/*: New upstream release spdlog 1.11.0

 	* vignettes/introduction.md: Small edits

2022-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/introduction.md: New sections for access from R and C++

2022-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* inst/include/RcppSpdlog: Ad second shorter namespace 'spdl' with
	shorter (inlined) function names as simpler accessors

 	* vignettes/introduction.md: Two new sections on access from R and
	C++, respectively

2022-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

2022-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* src/interface.cpp: Add R interface to spdlog
	* man/log_setup.Rd: Documentation

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

	* src/interface.cpp: Activate R and C++ interface generation
	* R/RcppExports.R: Updated accordingly
	* src/RcppExports.cpp: Idem
	* inst/include/RcppSpdlog.h: Generated
	* inst/include/RcppSpdlog_RcppExports.h: Idem
