@@ -1,3 +1,9 @@
+2022-11-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/formatter.cpp: Export to C++ to make formatter() callable
+	* src/RcppExports.cpp: Autogenerated export for C level access
+	* inst/include/RcppSpdlog_RcppExports.h: Idem
+
 2022-11-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Version 0.0.10
